<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.selenium.demo</groupId>
  <artifactId>BMSProject</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>BMSProject</name>
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>11</maven.compiler.source>
	<maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>

        <!-- Selenium Java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
			<version>4.21.0</version>
        </dependency>

        <!-- WebDriverManager (auto-manages ChromeDriver, no need for chromedriver.exe) -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.7.0</version>
        </dependency>

        <!-- TestNG -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.8.0</version>
            <scope>compile</scope>
        </dependency>

		<!-- Extent Reports -->
		<dependency>
		    <groupId>com.aventstack</groupId>
		    <artifactId>extentreports</artifactId>
		    <version>5.1.1</version>
		</dependency>

	    <!-- Allure TestNG -->
	    <dependency>
	        <groupId>io.qameta.allure</groupId>
	        <artifactId>allure-testng</artifactId>
	        <version>2.27.0</version>
	    </dependency>
	
		<!--RestAssured-->
	    <dependency>
	        <groupId>io.rest-assured</groupId>
	        <artifactId>rest-assured</artifactId>
	        <version>5.4.0</version>
	    </dependency>

		<!--JSON Converter-->
	    <dependency>
	        <groupId>com.fasterxml.jackson.core</groupId>
	        <artifactId>jackson-databind</artifactId>
	        <version>2.16.1</version>
	    </dependency>

		<!--Mongo-->
		<dependency>
		    <groupId>org.mongodb</groupId>
		    <artifactId>mongodb-driver-sync</artifactId>
		    <version>4.11.1</version>
		</dependency>

		<!--JSON Schema Validator-->
		<dependency>
		    <groupId>io.rest-assured</groupId>
		    <artifactId>json-schema-validator</artifactId>
		    <version>5.4.0</version>
		</dependency>

      <!-- Source: https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
      <dependency>
          <groupId>io.github.cdimascio</groupId>
          <artifactId>dotenv-java</artifactId>
          <version>3.2.0</version>
          <scope>compile</scope>
      </dependency>
    </dependencies>

  <build>
  <plugins>

    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>3.2.5</version>

      <configuration>

        <suiteXmlFiles>
            <suiteXmlFile>testng.xml</suiteXmlFile>
        </suiteXmlFiles>

        <systemPropertyVariables>
          <allure.results.directory>
            ${project.build.directory}/allure-results
          </allure.results.directory>
        </systemPropertyVariables>

      </configuration>

    </plugin>

  </plugins>
  </build>

</project>
